-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.4
-
Fix Version/s: 10.4.4
-
Component/s: Temporal Types
-
Labels:None
/git/10.4/sql/sql_class.h:4424: void THD::push_warning_truncated_value_for_field(Sql_state_errno_level::enum_warning_level, const char*, const char*, const char*): Assertion `name' failed.
|
181210 20:46:14 [ERROR] mysqld got signal 6 ;
|
|
stdlib/abort.c:91(__GI_abort)[0x7fbae289602a]
|
assert/assert.c:92(__assert_fail_base)[0x7fbae288cbd7]
|
/lib/x86_64-linux-gnu/libc.so.6(+0x2dc82)[0x7fbae288cc82]
|
sql/sql_class.h:4426(THD::push_warning_truncated_value_for_field(Sql_state_errno_level::enum_warning_level, char const*, char const*, char const*))[0x55e99bfcffb2]
|
sql/field.cc:10864(Field::set_datetime_warning(Sql_state_errno_level::enum_warning_level, unsigned int, ErrConv const*, char const*, int) const)[0x55e99c4779c8]
|
sql/field.h:1384(Field::set_datetime_warning(unsigned int, ErrConv const*, char const*, int) const)[0x55e99c47da08]
|
sql/field.cc:5545(Field_temporal::set_warnings(Sql_state_errno_level::enum_warning_level, ErrConv const*, int, char const*))[0x55e99c43b60b]
|
sql/field.h:2629(Field_temporal::store_invalid_with_warning(ErrConv const*, int, char const*))[0x55e99c482510]
|
sql/field.cc:6284(Field_date_common::store_TIME_with_warning(Datetime const*, ErrConv const*, int))[0x55e99c446145]
|
sql/field.cc:6327(Field_date_common::store_time_dec(st_mysql_time const*, unsigned int))[0x55e99c446c1c]
|
sql/item.cc:305(Item::save_date_in_field(Field*, bool))[0x55e99c4e3366]
|
sql/sql_type.cc:3395(Type_handler_temporal_with_date::Item_save_in_field(Item*, Field*, bool) const)[0x55e99c225064]
|
sql/item.cc:6470(Item::save_in_field(Field*, bool))[0x55e99c513249]
|
/home/alice/git/10.4/sql/mysqld(_ZN17Item_result_field20save_in_result_fieldEb+0x9e)[0x55e99bc7c52c]
|
sql/item.h:3076(Item_result_field::save_in_result_field(bool))[0x55e99bee2e61]
|
sql/sql_select.cc:24380(copy_funcs(Item**, THD const*))[0x55e99becb825]
|
sql/sql_select.cc:20802(end_write(JOIN*, st_join_table*, bool))[0x55e99bef8b48]
|
sql/sql_select.cc:27352(AGGR_OP::put_record(bool))[0x55e99bf04c69]
|
sql/sql_select.h:1021(AGGR_OP::put_record())[0x55e99bebfee6]
|
sql/sql_select.cc:19112(sub_select_postjoin_aggr(JOIN*, st_join_table*, bool))[0x55e99bec20bc]
|
sql/sql_select.cc:19610(evaluate_join_record(JOIN*, st_join_table*, int))[0x55e99bec0cc0]
|
sql/sql_select.cc:19390(sub_select(JOIN*, st_join_table*, bool))[0x55e99bebf15f]
|
sql/sql_select.cc:18930(do_select(JOIN*, Procedure*))[0x55e99be5db3f]
|
sql/sql_select.cc:4094(JOIN::exec_inner())[0x55e99be5b7e4]
|
sql/sql_select.cc:3889(JOIN::exec())[0x55e99be5ec13]
|
sql/sql_select.cc:4295(mysql_select(THD*, TABLE_LIST*, unsigned int, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x55e99be38eae]
|
sql/sql_select.cc:385(handle_select(THD*, LEX*, select_result*, unsigned long))[0x55e99bdaf2ff]
|
sql/sql_parse.cc:4243(mysql_execute_command(THD*))[0x55e99bdc7444]
|
sql/sql_parse.cc:8103(mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool))[0x55e99bda2266]
|
sql/sql_parse.cc:1852(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool))[0x55e99bd9f3fe]
|
sql/sql_parse.cc:1395(do_command(THD*))[0x55e99c0f64db]
|
sql/sql_connect.cc:1402(do_handle_one_connection(CONNECT*))[0x55e99c0f5eb8]
|
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7fbae34d16ba]
|
/lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7fbae296641d]
|
|
Query (0x62b000173288): CREATE TEMPORARY TABLE tmp10 AS SELECT DISTINCT BIT_LENGTH( `pk` ) AS field1 FROM `view_t3` GROUP BY CASE 0 WHEN `col_varchar` THEN ( ROUND( `col_time` ) ) END, FROM_DAYS( ( UUID() ) ) ORDER BY BENCHMARK( 3, ENCRYPT( 'f' ) ), CASE `vcol_char` WHEN 'eclasipxvqcsplbzfmznzdszbadydgvymahqnnvdvbbkahsykisjfqxszkrybrfetzeysbmjrgmdvdrtophdebflzeujqbvutshuqylveogxlswusjexzmmeuzxljtacdwteaoxnhtcmegiqezqzqfctvgvqmjyzgahazlusexohcjrvxplqyprvvtnvetyxjcinmibyvyjafxrjemcosaojakcoqrgolfgtvzjhhiinxqxqylkvno' THEN `col_datetime` ELSE 0 END
|
|
perl ./runall-new.pl --no-mask --seed=random --duration=400 --queries=100M --short_column_names --reporters=Backtrace,ErrorLog,Deadlock --validators=TransformerNoComparator --transformers=ConvertSubqueriesToViews,ConvertTablesToDerived,Count,DisableIndexes,DisableOptimizations,Distinct,EnableOptimizations,ExecuteAsCTE,ExecuteAsDeleteReturning,ExecuteAsDerived,ExecuteAsExcept,ExecuteAsExecuteImmediate,ExecuteAsInsertSelect,ExecuteAsIntersect,ExecuteAsSelectItem,ExecuteAsUnion,ExecuteAsUpdateDelete,ExecuteAsView,ExecuteAsWhereSubquery,Having,InlineSubqueries,InlineVirtualColumns,LimitRowsExamined,OrderBy,StraightJoin,ExecuteAsPreparedTwice,ExecuteAsTrigger,ExecuteAsSPTwice,ExecuteAsFunctionTwice --mysqld=--log_output=FILE --redefine=conf/mariadb/modules/sql_mode.yy --querytimeout=30 --redefine=conf/mariadb/alter_table.yy --redefine=conf/mariadb/sp.yy --redefine=conf/mariadb/bulk_insert.yy --redefine=conf/mariadb/sequences.yy --views --vcols --notnull --threads=8 --grammar=conf/mariadb/functions-pre-10.3.yy --engine=InnoDB --gendata-advanced --basedir1=/git/10.4 --vardir1=/1
|
- relates to
-
MDEV-17274 Split Field_temporal_with_date::store*() for Field_date_common and Field_datetime
-
- Closed
-