MDEV-17969 Assertion `name' failed in THD::push_warning_truncated_value_for_field